(lang dune 3.3)
(name domain-local-await)
(generate_opam_files true)
(source (github ocaml-multicore/domain-local-await))
(authors "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(maintainers "Vesa Karvonen <vesa.a.j.k@gmail.com>")
(homepage "https://github.com/ocaml-multicore/domain-local-await")
(license "ISC")
(package (name domain-local-await)
 (synopsis "A scheduler independent blocking mechanism")
 (description "A low level mechanism intended for writing higher level libraries that need to block in a scheduler friendly manner.")
 (depends
  (ocaml (>= 4.12.0))
  (thread-table (>= 1.0.0))
  (alcotest (and (>= 1.7.0) :with-test))
  (mdx (and (>= 1.10.0) :with-test))))
(using mdx 0.2)
