(* -*- tuareg -*- *)

let maybe_threads =
  if Jbuild_plugin.V1.ocaml_version < "5" then "threads" else ""

let () =
  Jbuild_plugin.V1.send
  @@ {|

(library
 (name Domain_local_await)
 (modules domain_local_await thread_intf domain)
 (public_name domain-local-await)
 (libraries thread-table |}
  ^ maybe_threads
  ^ {| ))

(rule
 (enabled_if (< %{ocaml_version} 5.0.0))
 (action (copy domain_fake.ml domain.ml)))

(rule
 (enabled_if (>= %{ocaml_version} 5.0.0))
 (action (copy domain_real.ml domain.ml)))

|}
